<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/mem_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/black"
        android:scaleType="fitCenter"
        android:layout_margin="0dp"
        android:src="@drawable/businesslogo"
        android:layout_alignParentTop="true"
        android:contentDescription="Image of Memory Express Business Logo" />

    <TextView
        android:id="@+id/business_name"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mem_logo"
        android:fontFamily="@font/allerta"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/business"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/description_header"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/business_name"
        android:fontFamily="@font/allerta"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:textStyle="bold"
        android:text="@string/about"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/description_body"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_header"
        android:fontFamily="@font/allerta"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:text="@string/business_des"
        android:textSize="12sp" />

    <ImageView
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:id="@+id/location"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:layout_margin="0dp"
        android:src="@drawable/location"
        android:layout_below="@id/description_body"
        android:contentDescription="Image of Location" />
    <ImageView
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:id="@+id/clock"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:layout_margin="0dp"
        android:src="@drawable/clock"
        android:layout_below="@id/location"
        android:contentDescription="Image of clock" />
    <ImageView
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:id="@+id/star"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:layout_margin="0dp"
        android:src="@drawable/star"
        android:layout_below="@id/clock"
        android:contentDescription="Image of Review Star" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:layout_toRightOf="@id/location"
        android:layout_below="@id/description_body"
        android:fontFamily="@font/allerta"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/address"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/hours"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:layout_toRightOf="@id/clock"
        android:layout_below="@id/location"
        android:fontFamily="@font/allerta"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/store_hours"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/Reviews"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:layout_toRightOf="@id/star"
        android:layout_below="@id/clock"
        android:fontFamily="@font/allerta"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/avg_review"
        android:textSize="14sp"

        />

</RelativeLayout>